@@ -17,6 +17,7 @@ FreeRapid Downloader 0.86
   Added : If the same file is downloaded from multiple sources, duplicates are automatically skipped
   Added : Support for preventing standby while downloading
   Added : Support for using system recycle bin for deleting files
+  Added : Support for new search engine - http://wuploadsearch.com
   Changed : Speed up startup time 
   Changed : Internal - NirCmd is not used anymore for native Windows actions
   Changed : Internal - Updated BetterSwingApplicationFramework to v1.9.3 snapshot
